--- a/src/main.css
+++ b/src/main.css
@@ -140,7 +140,7 @@ h4 {
 }
 
 .hero {
-  background:url(images/luxurystore.jpeg);
+  background:url(images/background.jpg);
   background-position: center;
 }
 
