--- a/partials/nav.hbs
+++ b/partials/nav.hbs
@@ -4,14 +4,13 @@
             <div class="inline-flex items-center">
                 <img src="images/yext-logo.svg" height="56" width="56" class="hidden md:flex">
                 <h2 class="md:pl-5 text-xl cursor-pointer">
-                    Yext's Fashion Warehouse
+                    Yext's Starter Pages
                 </h2>
             </div>
         </a>
         <div class="hidden md:flex grid gap-x-10">
             <a href="#" class="headerLink hover:underline ">Home</a>
             <a href="#" class="headerLink hover:underline ">About</a>
-            <a href="#" class="headerLink hover:underline ">Locations</a>
             <a href="#" class="headerLink hover:underline ">Blog</a>
         </div>
         <button class="hidden md:flex w-auto px-8 py-2 my-2 text-base font-medium text-white bg-black rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:bg-gray-700">
