--- a/templates/entity-pages.hbs
+++ b/templates/entity-pages.hbs
@@ -1,29 +1,21 @@
 ---
 {
     "stream": {
-        "$id": "locations",
+        "$id": "sample-stream",
         "source": "knowledgeGraph",
         "destination": "pages",
         "fields": [
             "id", 
             "uid", 
             "name", 
-            "address", 
             "mainPhone",
             "description", 
-            "hours",
             "photoGallery",
-            "slug",
-            "geocodedCoordinate",
-            "services",
-            "neighborhood",
-            "paymentOptions",
-            "c_relatedFAQs.question",
-            "c_relatedFAQs.answer"
+            "slug"
         ], 
         "filter" : {
             "entityTypes": [
-                "location"
+                ""
             ]
         }
     },
@@ -46,10 +38,10 @@
                 </div> --}}
                 {{>hero}}
                 <div class="centered-container">
-                    <div class="section">{{>locationdetails}} </div>
-                    <div class="section">{{>aboutmap}} </div>
-                    <div class="section">{{>nearby geocodedCoordinate}}</div>
-                    <div class="section">{{>faqs c_relatedFAQs}}</div>  
+          
+                    <div class="section">{{>about}} </div>
+              
+                 
                     <script src="faqs.js"></script>  
                 </div>
                 <div class="w-full bg-gray-100">
